helm-dataplane/retail-store-ingress/ingress.yaml
---
# Source: retail-store-ingress/templates/ingress_https_ip_mode.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "retail-store-https-helm-alb"
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: "retail-store-helm-ingress-alb"
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:788143860357:certificate/3de61619-99f6-423d-b835-8b4441238669"
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'        
spec:
  ingressClassName: alb 
  defaultBackend:
    service:
      name: "ingress"
      port:
        number: 80
